@@ -52,8 +52,10 @@
 
 		<!-- This property is used to specify the modules included in the (custom) JVM image. -->
 <!--		<jvm.modules>java.desktop,logback.core,hppcrt,org.apache.commons.io,json.simple,slf4j.api,org.jfree.jfreechart,org.apache.commons.lang3,logback.classic,org.apache.commons.text</jvm.modules>-->
-<jvm.modules>java.desktop</jvm.modules>
-<!--<jvm.modules>java.desktop</jvm.modules>-->
+		<jvm.modules>java.desktop,java.naming,jdk.localedata,jdk.unsupported</jvm.modules>
+		<jvm.locales>en</jvm.locales>
+		<jvm.temporaryFolder>out</jvm.temporaryFolder>
+		<jvm.outputFolder>jvm-image</jvm.outputFolder>
 		<!-- This ID is used by the Windows installer system to know that an installer is intended to replace/upgrade an earlier version.
 			Grab a unique UUID via https://www.uuidgenerator.net -->
 		<windows.upgrade.uuid>523ce3a3-9838-484b-8219-a3832bde60f9</windows.upgrade.uuid>
@@ -68,11 +70,8 @@
 		<maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
 <!--		<maven-shade-plugin.version>3.3.0</maven-shade-plugin.version>-->
 		<maven-assembly-plugin.version>3.3.0</maven-assembly-plugin.version>
-<!-- to be revised -->
-		<maven-dependency-plugin.version>2.8</maven-dependency-plugin.version>
+		<exec-maven-plugin.version>3.0.0</exec-maven-plugin.version>
 		<maven-install-plugin.version>2.5.2</maven-install-plugin.version>
-		<maven-jlink-plugin.version>3.1.0</maven-jlink-plugin.version>
-<!--		<maven-jar-plugin.version>3.2.0</maven-jar-plugin.version>-->
 
 		<!-- Apache -->
 		<apache.commons-text.version>1.9</apache.commons-text.version>
@@ -241,7 +240,7 @@
 						</goals>
 						<configuration>
 							<sourceDirectory>${project.basedir}/aids</sourceDirectory>
-							<outputDirectory>${project.build.directory}/out/aids</outputDirectory>
+							<outputDirectory>${project.build.directory}/${jvm.temporaryFolder}/aids</outputDirectory>
 						</configuration>
 					</execution>
 				</executions>
@@ -264,7 +263,7 @@
 <!--							<minimizeJar>true</minimizeJar>-->
 <!--							<shadedArtifactAttached>true</shadedArtifactAttached>-->
 <!--							<shadedClassifierName>shaded</shadedClassifierName>-->
-<!--							<outputDirectory>${project.build.directory}/out</outputDirectory>-->
+<!--							<outputDirectory>${project.build.directory}/${jvm.temporaryFolder}</outputDirectory>-->
 <!--							<filters>-->
 <!--								&lt;!&ndash; FIXME: strengthen the inclusions &ndash;&gt;-->
 <!--								&lt;!&ndash; ClassNotFoundException: ch.qos.logback.classic.boolex.OnMarkerEvaluator&ndash;&gt;-->
@@ -319,7 +318,7 @@
 							<mainClass>${main.class}</mainClass>
 						</manifest>
 					</archive>
-					<outputDirectory>${project.build.directory}/out</outputDirectory>
+					<outputDirectory>${project.build.directory}/${jvm.temporaryFolder}</outputDirectory>
 					<appendAssemblyId>false</appendAssemblyId>
 				</configuration>
 				<executions>
@@ -332,41 +331,49 @@
 					</execution>
 				</executions>
 			</plugin>
-			<!-- Dependency -->
-			<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-dependency-plugin -->
-<!--			<plugin>-->
-<!--				<groupId>org.apache.maven.plugins</groupId>-->
-<!--				<artifactId>maven-dependency-plugin</artifactId>-->
-<!--				<version>${maven-dependency-plugin.version}</version>-->
-<!--				<executions>-->
-<!--					<execution>-->
-<!--						&lt;!&ndash; This copies all of the jar files declared by the Maven build into a single directory.-->
-<!--						This makes it easy to assemble the final installer package &ndash;&gt;-->
-<!--						<id>copy-dependencies</id>-->
-<!--						<phase>package</phase>-->
-<!--						<goals>-->
-<!--							<goal>copy-dependencies</goal>-->
-<!--						</goals>-->
-<!--					</execution>-->
-<!--				</executions>-->
-<!--			</plugin>-->
-			<!-- JAR -->
-			<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-jar-plugin -->
-<!--			<plugin>-->
-<!--				&lt;!&ndash; Put the application jar generated by the project into the dependency folder - the default folder-->
-<!--				for the maven-dependency-plugin output. &ndash;&gt;-->
-<!--				<groupId>org.apache.maven.plugins</groupId>-->
-<!--				<artifactId>maven-jar-plugin</artifactId>-->
-<!--				<version>${maven-jar-plugin.version}</version>-->
-<!--				<configuration>-->
-<!--					<archive>-->
-<!--						<manifest>-->
-<!--							<mainClass>${main.class}</mainClass>-->
-<!--						</manifest>-->
-<!--					</archive>-->
-<!--					<outputDirectory>${project.build.directory}/dependency</outputDirectory>-->
-<!--				</configuration>-->
-<!--			</plugin>-->
+			<!-- Jlink -->
+			<!-- https://mvnrepository.com/artifact/org.codehaus.mojo/exec-maven-plugin -->
+			<!-- .\jvm-image\bin\java.exe -jar .\out\HunLinter-2.0.1-SNAPSHOT.jar -->
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>exec-maven-plugin</artifactId>
+				<version>${exec-maven-plugin.version}</version>
+				<executions>
+					<execution>
+						<id>jlink</id>
+						<phase>package</phase>
+						<goals>
+							<goal>exec</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<systemProperties>
+						<systemProperty>
+							<key>java.home</key>
+							<value>${JAVA_HOME}</value>
+						</systemProperty>
+					</systemProperties>
+					<workingDirectory>${project.build.directory}</workingDirectory>
+					<executable>${java.home}/bin/jlink</executable>
+					<arguments>
+						<argument>--strip-debug</argument>
+						<argument>--compress</argument>
+							<argument>2</argument>
+						<argument>--no-header-files</argument>
+						<argument>--no-man-pages</argument>
+						<argument>--include-locales=${jvm.locales}</argument>
+						<argument>--module-path</argument>
+							<argument>./${jvm.temporaryFolder}</argument>
+						<argument>--add-modules</argument>
+							<argument>${jvm.modules}</argument>
+<!--						<argument>&#45;&#45;launcher</argument>-->
+<!--							<argument>run=io.github.mtrevisan.hunlinter/${main.class}</argument>-->
+						<argument>--output</argument>
+							<argument>${jvm.outputFolder}</argument>
+					</arguments>
+				</configuration>
+			</plugin>
 			<!-- Install -->
 			<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-install-plugin -->
 			<plugin>
@@ -378,222 +385,6 @@
 					<skip>true</skip>
 				</configuration>
 			</plugin>
-
-<!--			<plugin>-->
-<!--				<groupId>org.moditect</groupId>-->
-<!--				<artifactId>moditect-maven-plugin</artifactId>-->
-<!--				<version>1.0.0.RC1</version>-->
-<!--				<executions>-->
-<!--					<execution>-->
-<!--						<id>generate-module-info</id>-->
-<!--						<phase>generate-sources</phase>-->
-<!--						<goals>-->
-<!--							<goal>add-module-info</goal>-->
-<!--						</goals>-->
-<!--						<configuration>-->
-<!--							<outputDirectory>${project.build.directory}/dependency</outputDirectory>-->
-<!--							<overwriteExistingFiles>true</overwriteExistingFiles>-->
-<!--							<modules>-->
-<!--								<module>-->
-<!--									<artifact>-->
-<!--										<groupId>ch.qos.logback</groupId>-->
-<!--										<artifactId>logback-classic</artifactId>-->
-<!--										<version>${logback.logback-classic.version}</version>-->
-<!--									</artifact>-->
-<!--									<moduleInfoSource>-->
-<!--										module logback.classic{-->
-<!--											exports ch.qos.logback.classic;-->
-<!--											exports org.slf4j.impl;-->
-<!--										}-->
-<!--									</moduleInfoSource>-->
-<!--								</module>-->
-<!--								<module>-->
-<!--									<artifact>-->
-<!--										<groupId>ch.qos.logback</groupId>-->
-<!--										<artifactId>logback-core</artifactId>-->
-<!--										<version>${logback.logback-classic.version}</version>-->
-<!--									</artifact>-->
-<!--									<moduleInfoSource>-->
-<!--										module logback.core{-->
-<!--											exports ch.qos.logback.core;-->
-<!--										}-->
-<!--									</moduleInfoSource>-->
-<!--								</module>-->
-<!--								<module>-->
-<!--									<artifact>-->
-<!--										<groupId>org.slf4j</groupId>-->
-<!--										<artifactId>slf4j-api</artifactId>-->
-<!--										<version>1.7.25</version>-->
-<!--									</artifact>-->
-<!--									<moduleInfoSource>-->
-<!--										module org.slf4j{-->
-<!--											exports org.slf4j;-->
-<!--										}-->
-<!--									</moduleInfoSource>-->
-<!--								</module>-->
-<!--								<module>-->
-<!--									<artifact>-->
-<!--										<groupId>com.github.vsonnier</groupId>-->
-<!--										<artifactId>hppcrt</artifactId>-->
-<!--										<version>0.7.5</version>-->
-<!--									</artifact>-->
-<!--									<moduleInfoSource>-->
-<!--										module hppcrt{-->
-<!--											exports com.carrotsearch.hppcrt;-->
-<!--										}-->
-<!--									</moduleInfoSource>-->
-<!--								</module>-->
-<!--								<module>-->
-<!--									<artifact>-->
-<!--										<groupId>com.googlecode.json-simple</groupId>-->
-<!--										<artifactId>json-simple</artifactId>-->
-<!--										<version>${googlecode.json-simple.version}</version>-->
-<!--									</artifact>-->
-<!--									<moduleInfoSource>-->
-<!--										module json.simple{-->
-<!--											exports org.json.simple;-->
-<!--										}-->
-<!--									</moduleInfoSource>-->
-<!--								</module>-->
-
-<!--								<module>-->
-<!--									<artifact>-->
-<!--										<groupId>commons-io</groupId>-->
-<!--										<artifactId>commons-io</artifactId>-->
-<!--										<version>${apache.commons-io.version}</version>-->
-<!--									</artifact>-->
-<!--									<moduleInfoSource>-->
-<!--										module org.apache.commons.io{-->
-<!--											exports org.apache.commons.io;-->
-<!--										}-->
-<!--									</moduleInfoSource>-->
-<!--								</module>-->
-<!--								<module>-->
-<!--									<artifact>-->
-<!--										<groupId>org.apache.commons</groupId>-->
-<!--										<artifactId>commons-lang3</artifactId>-->
-<!--										<version>3.11</version>-->
-<!--									</artifact>-->
-<!--									<moduleInfoSource>-->
-<!--										module org.apache.commons.lang3{-->
-<!--											exports org.apache.commons.lang3;-->
-<!--										}-->
-<!--									</moduleInfoSource>-->
-<!--								</module>-->
-<!--								<module>-->
-<!--									<artifact>-->
-<!--										<groupId>org.apache.commons</groupId>-->
-<!--										<artifactId>commons-text</artifactId>-->
-<!--										<version>${apache.commons-text.version}</version>-->
-<!--									</artifact>-->
-<!--									<moduleInfoSource>-->
-<!--										module org.apache.commons.text{-->
-<!--											exports org.apache.commons.text;-->
-<!--										}-->
-<!--									</moduleInfoSource>-->
-<!--								</module>-->
-<!--								<module>-->
-<!--									<artifact>-->
-<!--										<groupId>org.jfree</groupId>-->
-<!--										<artifactId>jfreechart</artifactId>-->
-<!--										<version>${jfree.jfreechart.version}</version>-->
-<!--									</artifact>-->
-<!--									<moduleInfoSource>-->
-<!--										module org.jfree.jfreechart{-->
-<!--											exports org.jfree.chart;-->
-<!--											exports org.jfree.data;-->
-<!--										}-->
-<!--									</moduleInfoSource>-->
-<!--								</module>-->
-<!--							</modules>-->
-<!--						</configuration>-->
-<!--					</execution>-->
-<!--				</executions>-->
-<!--			</plugin>-->
-
-			<!-- Jlink -->
-			<!-- & 'C:\Program Files\Java\jdk-16\bin\jlink' - -strip-debug - -compress 2 - -module-path ./out - -no-header-files - -no-man-pages - -add-modules java.desktop - -output jvm-image -->
-			<!-- .\jvm-image\bin\java.exe -jar .\out\HunLinter-2.0.1-SNAPSHOT.jar -->
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-jlink-plugin</artifactId>
-				<version>${maven-jlink-plugin.version}</version>
-				<extensions>true</extensions>
-				<executions>
-					<execution>
-						<id>jlink-execution</id>
-						<phase>package</phase>
-						<goals>
-							<goal>jlink</goal>
-						</goals>
-						<configuration>
-							<!-- configuration elements goes here -->
-							<noHeaderFiles>true</noHeaderFiles>
-							<noManPages>true</noManPages>
-							<stripDebug>true</stripDebug>
-							<compress>2</compress>
-							<modulePaths>
-<!--								<modulePath>%JAVA_HOME%\jmods</modulePath>-->
-<!--								<modulePath>${project.build.directory}/dependency</modulePath>-->
-								<modulePath>${project.build.directory}/out</modulePath>
-<!--								<modulePath>${project.basedir}/${platform}/</modulePath>-->
-							</modulePaths>
-							<addModules>${jvm.modules}</addModules>
-							<outputDirectory>${project.build.directory}/jvm-image</outputDirectory>
-<!--							<launcher>run=io.github.mtrevisan.hunlinter/io.github.mtrevisan.hunlinter.MainFrame</launcher>-->
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-
-			<!-- Vix -->
-			<!-- https://github.com/wiverson/jtoolprovider-plugin -->
-<!--			<plugin>-->
-<!--				<groupId>io.github.wiverson</groupId>-->
-<!--				<artifactId>jtoolprovider-plugin</artifactId>-->
-<!--				<version>1.0.34</version>-->
-<!--				<executions>-->
-<!--					<execution>-->
-<!--						<id>jlink</id>-->
-<!--						<phase>package</phase>-->
-<!--						<goals>-->
-<!--							<goal>java-tool</goal>-->
-<!--						</goals>-->
-<!--						<configuration>-->
-<!--							<toolName>jlink</toolName>-->
-<!--							<removeDirectories>${project.build.directory}/jvm-image/</removeDirectories>-->
-<!--							<modulePath>${project.basedir}/${platform}/</modulePath>-->
-<!--							<addModules>${jvm.modules}</addModules>-->
-<!--							<output>${project.build.directory}/jvm-image</output>-->
-<!--							<args>-->
-<!--								<arg>&#45;&#45;strip-native-commands</arg>-->
-<!--								<arg>&#45;&#45;no-header-files</arg>-->
-<!--								<arg>&#45;&#45;strip-debug</arg>-->
-<!--								<arg>&#45;&#45;no-man-pages</arg>-->
-<!--								<arg>&#45;&#45;compress=2</arg>-->
-<!--							</args>-->
-<!--						</configuration>-->
-<!--					</execution>-->
-<!--					&lt;!&ndash; The command that actually generates the installer. The options for each platform-->
-<!--					are found the /src/packaging directory. These files are copied into the target directory by-->
-<!--					the Maven resources plugin, which does the filtering to replace the original values with-->
-<!--					the actual Maven properties.-->
-<!--					https://github.com/wiverson/jtoolprovider-plugin/blob/main/java-tool-doc.md-->
-<!--					&ndash;&gt;-->
-<!--					<execution>-->
-<!--						<id>jpackage</id>-->
-<!--						<phase>install</phase>-->
-<!--						<goals>-->
-<!--							<goal>java-tool</goal>-->
-<!--						</goals>-->
-<!--						<configuration>-->
-<!--							<toolName>jpackage</toolName>-->
-<!--							<removeDirectories>${project.build.directory}/installer-work</removeDirectories>-->
-<!--							<args>@${project.build.directory}/packaging/${platform}-jpackage.txt</args>-->
-<!--						</configuration>-->
-<!--					</execution>-->
-<!--				</executions>-->
-<!--			</plugin>-->
 		</plugins>
 
 		<resources>
